# api/oapigen/types.go
@@ -1,51 +1,54 @@
 // Package oapigen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version (devel) DO NOT EDIT.
+// Code generated by unknown module path version unknown version DO NOT EDIT.
 package oapigen
 
 import (
 	"encoding/json"
 	"fmt"
 
-	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
+	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 // Defines values for BlobPurpose.
 const (
 	MaterialDefinition BlobPurpose = "material_definition"
 	ObjectModel        BlobPurpose = "object_model"
+	ObjectTexture      BlobPurpose = "object_texture"
 	ObjectThumbnail    BlobPurpose = "object_thumbnail"
-	Texture            BlobPurpose = "texture"
 )
 
-// Defines values for PromptModel.
+// Defines values for PromptIntentModel.
 const (
-	DreamfusionDeepfloydIf     PromptModel = "dreamfusion_deepfloyd-if"
-	DreamfusionStableDiffusion PromptModel = "dreamfusion_stable-diffusion"
+	MvdreamSd21 PromptIntentModel = "mvdream-sd21"
 )
 
 // Blob defines model for Blob.
 type Blob struct {
 	// Created Time at which the blob was created. Measured in seconds since the Unix epoch.
-	Created  int    `json:"created"`
+	Created int `json:"created"`
+
+	// Filename The name for saving the blob to a filesystem.
 	Filename string `json:"filename"`
 
 	// Id Unique identifier for the blob.
-	Id string `json:"id"`
+	Id *string `json:"id,omitempty"`
 
 	// Purpose The purpose of the uploaded blob:
 	//  * `material_definition` - A material definition that is to apply material to an object file.
 	//  * `object_model` - An object file (usually `.stl` or `.obj`)
-	//  * `texture` - A texture image that can be applied to an object model.
+	//  * `object_texture` - A texture image that can be applied to an object model.
 	//  * `object_thumbnail` - A thumbnail for an object file.
 	Purpose BlobPurpose `json:"purpose"`
-	Type    string      `json:"type"`
+
+	// Type The extension of the blob (for example, obj, jpgg, mtl)
+	Type string `json:"type"`
 }
 
 // BlobPurpose The purpose of the uploaded blob:
 //   - `material_definition` - A material definition that is to apply material to an object file.
 //   - `object_model` - An object file (usually `.stl` or `.obj`)
-//   - `texture` - A texture image that can be applied to an object model.
+//   - `object_texture` - A texture image that can be applied to an object model.
 //   - `object_thumbnail` - A thumbnail for an object file.
 type BlobPurpose string
 
@@ -77,11 +80,6 @@ type ErrorResponse struct {
 	RequestId RequestID `json:"request_id"`
 }
 
-// HealthCheckResponse defines model for HealthCheckResponse.
-type HealthCheckResponse struct {
-	Error *Error `json:"error,omitempty"`
-}
-
 // ObjectFiles defines model for ObjectFiles.
 type ObjectFiles struct {
 	// MaterialDefinitionBlobId Unique identifier for the material definition blob.
@@ -97,45 +95,49 @@ type ObjectFiles struct {
 	TextureBlobId *string `json:"texture_blob_id,omitempty"`
 }
 
-// Prompt defines model for Prompt.
-type Prompt struct {
-	// Id Unique identifier for the prompt.
-	Id string `json:"id"`
+// PromptIntent defines model for PromptIntent.
+type PromptIntent struct {
+	BlobIds *ObjectFiles `json:"blob_ids,omitempty"`
+
+	// Id Unique identifier for the PromptIntent.
+	Id *string `json:"id,omitempty"`
 
 	// Model The model used to generate the content.
-	Model PromptModel  `json:"model"`
-	Obj   *ObjectFiles `json:"obj,omitempty"`
+	Model PromptIntentModel `json:"model"`
 
 	// Prompt The human readable text of this prompt.
-	Prompt               string                 `json:"prompt"`
+	Prompt string `json:"prompt"`
+
+	// Status The status of this PromptIntent.
+	Status               *string                `json:"status,omitempty"`
 	AdditionalProperties map[string]interface{} `json:"-"`
 }
 
-// PromptModel The model used to generate the content.
-type PromptModel string
+// PromptIntentModel The model used to generate the content.
+type PromptIntentModel string
 
-// PromptRequest defines model for PromptRequest.
-type PromptRequest struct {
-	Prompt Prompt `json:"prompt"`
+// PromptIntentRequest defines model for PromptIntentRequest.
+type PromptIntentRequest struct {
+	PromptIntent PromptIntent `json:"prompt_intent"`
 }
 
-// PromptResponse defines model for PromptResponse.
-type PromptResponse struct {
-	Prompt    *Prompt   `json:"prompt,omitempty"`
-	RequestId RequestID `json:"request_id"`
+// PromptIntentResponse defines model for PromptIntentResponse.
+type PromptIntentResponse struct {
+	PromptIntent *PromptIntent `json:"prompt_intent,omitempty"`
+	RequestId    RequestID     `json:"request_id"`
 }
 
-// PromptsResponse defines model for PromptsResponse.
-type PromptsResponse struct {
-	Prompts   *[]Prompt `json:"prompts,omitempty"`
-	RequestId RequestID `json:"request_id"`
+// PromptIntentsResponse defines model for PromptIntentsResponse.
+type PromptIntentsResponse struct {
+	PromptIntents *[]PromptIntent `json:"prompt_intents,omitempty"`
+	RequestId     RequestID       `json:"request_id"`
 }
 
 // RequestID defines model for RequestID.
 type RequestID = openapi_types.UUID
 
-// GetPromptsParams defines parameters for GetPrompts.
-type GetPromptsParams struct {
+// GetPromptIntentsParams defines parameters for GetPromptIntents.
+type GetPromptIntentsParams struct {
 	// Page A cursor for pagination across multiple pages.
 	Page *int `form:"page,omitempty" json:"page,omitempty"`
 
@@ -146,32 +148,40 @@ type GetPromptsParams struct {
 // CreateBlobJSONRequestBody defines body for CreateBlob for application/json ContentType.
 type CreateBlobJSONRequestBody = BlobRequest
 
-// CreatePromptJSONRequestBody defines body for CreatePrompt for application/json ContentType.
-type CreatePromptJSONRequestBody = PromptRequest
+// CreatePromptIntentJSONRequestBody defines body for CreatePromptIntent for application/json ContentType.
+type CreatePromptIntentJSONRequestBody = PromptIntentRequest
 
-// Getter for additional properties for Prompt. Returns the specified
+// Getter for additional properties for PromptIntent. Returns the specified
 // element and whether it was found
-func (a Prompt) Get(fieldName string) (value interface{}, found bool) {
+func (a PromptIntent) Get(fieldName string) (value interface{}, found bool) {
 	if a.AdditionalProperties != nil {
 		value, found = a.AdditionalProperties[fieldName]
 	}
 	return
 }
 
-// Setter for additional properties for Prompt
-func (a *Prompt) Set(fieldName string, value interface{}) {
+// Setter for additional properties for PromptIntent
+func (a *PromptIntent) Set(fieldName string, value interface{}) {
 	if a.AdditionalProperties == nil {
 		a.AdditionalProperties = make(map[string]interface{})
 	}
 	a.AdditionalProperties[fieldName] = value
 }
 
-// Override default JSON handling for Prompt to handle AdditionalProperties
-func (a *Prompt) UnmarshalJSON(b []byte) error {
+// Override default JSON handling for PromptIntent to handle AdditionalProperties
+func (a *PromptIntent) UnmarshalJSON(b []byte) error {
 	object := make(map[string]json.RawMessage)
 	err := json.Unmarshal(b, &object)
 	if err != nil {
 		return err
+	}
+
+	if raw, found := object["blob_ids"]; found {
+		err = json.Unmarshal(raw, &a.BlobIds)
+		if err != nil {
+			return fmt.Errorf("error reading 'blob_ids': %w", err)
+		}
+		delete(object, "blob_ids")
 	}
 
 	if raw, found := object["id"]; found {
@@ -190,14 +200,6 @@ func (a *Prompt) UnmarshalJSON(b []byte) error {
 		delete(object, "model")
 	}
 
-	if raw, found := object["obj"]; found {
-		err = json.Unmarshal(raw, &a.Obj)
-		if err != nil {
-			return fmt.Errorf("error reading 'obj': %w", err)
-		}
-		delete(object, "obj")
-	}
-
 	if raw, found := object["prompt"]; found {
 		err = json.Unmarshal(raw, &a.Prompt)
 		if err != nil {
@@ -206,13 +208,21 @@ func (a *Prompt) UnmarshalJSON(b []byte) error {
 		delete(object, "prompt")
 	}
 
+	if raw, found := object["status"]; found {
+		err = json.Unmarshal(raw, &a.Status)
+		if err != nil {
+			return fmt.Errorf("error reading 'status': %w", err)
+		}
+		delete(object, "status")
+	}
+
 	if len(object) != 0 {
 		a.AdditionalProperties = make(map[string]interface{})
 		for fieldName, fieldBuf := range object {
 			var fieldVal interface{}
 			err := json.Unmarshal(fieldBuf, &fieldVal)
 			if err != nil {
-				return fmt.Errorf("error unmarshalling field %s: %w", fieldName, err)
+				return fmt.Errorf("error unmarshaling field %s: %w", fieldName, err)
 			}
 			a.AdditionalProperties[fieldName] = fieldVal
 		}
@@ -220,14 +230,23 @@ func (a *Prompt) UnmarshalJSON(b []byte) error {
 	return nil
 }
 
-// Override default JSON handling for Prompt to handle AdditionalProperties
-func (a Prompt) MarshalJSON() ([]byte, error) {
+// Override default JSON handling for PromptIntent to handle AdditionalProperties
+func (a PromptIntent) MarshalJSON() ([]byte, error) {
 	var err error
 	object := make(map[string]json.RawMessage)
 
-	object["id"], err = json.Marshal(a.Id)
-	if err != nil {
-		return nil, fmt.Errorf("error marshaling 'id': %w", err)
+	if a.BlobIds != nil {
+		object["blob_ids"], err = json.Marshal(a.BlobIds)
+		if err != nil {
+			return nil, fmt.Errorf("error marshaling 'blob_ids': %w", err)
+		}
+	}
+
+	if a.Id != nil {
+		object["id"], err = json.Marshal(a.Id)
+		if err != nil {
+			return nil, fmt.Errorf("error marshaling 'id': %w", err)
+		}
 	}
 
 	object["model"], err = json.Marshal(a.Model)
@@ -235,16 +254,16 @@ func (a Prompt) MarshalJSON() ([]byte, error) {
 		return nil, fmt.Errorf("error marshaling 'model': %w", err)
 	}
 
-	if a.Obj != nil {
-		object["obj"], err = json.Marshal(a.Obj)
-		if err != nil {
-			return nil, fmt.Errorf("error marshaling 'obj': %w", err)
-		}
-	}
-
 	object["prompt"], err = json.Marshal(a.Prompt)
 	if err != nil {
 		return nil, fmt.Errorf("error marshaling 'prompt': %w", err)
+	}
+
+	if a.Status != nil {
+		object["status"], err = json.Marshal(a.Status)
+		if err != nil {
+			return nil, fmt.Errorf("error marshaling 'status': %w", err)
+		}
 	}
 
 	for fieldName, field := range a.AdditionalProperties {
